...
    <string name="loops3">do</string>
    <string name="method">Methods</string>
    <string name="arrays">Single Dimensional Arrays</string>
    <string name="EmailPrompt">Please enter an email.</string>
    <string name="EmailExample">example123@example.com</string>
    <string name="EmailSend">Send Email</string>
    <string name="EmailConfirm">Email Sent</string>
    <string name="ConfirmEmail" />
    <string name="SecondaryEmail">Please enter a secondary email.</string>
    <string name="EnterUsername">Please enter your username.</string>
    <string name="UsernameHint">Username</string>
    <string name="elementarylesson1">Intro</string>
    <string name="elementarylesson2">Numeric Data Types and Operations</string>
...
